fix(ui): prevent horizontal scrolling

--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -20,6 +20,7 @@ body {
   font-family: "avenir";
   font-size: 16px;
   background-color: var(--primary-color);
+  overflow-x: hidden;
 }
 
 h1,
